// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`batman should lose at the batman game 1`] = `
Object {
  "format": "markdown",
  "message": "Let's play Batman. Type in stuff for the Batcave. Type \\"77\\" to keep your points or \\"kl\\" to throw it all away.",
}
`;

exports[`batman should lose at the batman game 2`] = `
Object {
  "format": "markdown",
  "message": "Adding batgirl to the Batcave.",
}
`;

exports[`batman should lose at the batman game 3`] = `
Object {
  "format": "markdown",
  "message": "Type \\"kl\\" and you lose the Batgame :( \\"kl\\" ended the Batgame. Your Batstuff is:

- batgirl

Your Batscore is 0.
That was fun, Tim!",
}
`;

exports[`batman should win at the batman game 1`] = `
Object {
  "format": "markdown",
  "message": "Let's play Batman. Type in stuff for the Batcave. Type \\"77\\" to keep your points or \\"kl\\" to throw it all away.",
}
`;

exports[`batman should win at the batman game 2`] = `
Object {
  "format": "markdown",
  "message": "Adding batmobile to the Batcave.",
}
`;

exports[`batman should win at the batman game 3`] = `
Object {
  "format": "markdown",
  "message": "You won! Right now!! \\"77\\" ended the Batgame. Your Batstuff is:

- batmobile

Your Batscore is 1.
That was fun, Tim!",
}
`;
